have a nice day!

--- a/indexes/nsc993/64.md
+++ b/indexes/nsc993/64.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [“全面小康”下的农村老人生活一瞥](../../pages/nsc993/n13301579.md) 
 #### [【网海拾贝】“台湾正处在民主防线的最前缘”](../../pages/nsc993/n13298607.md) 
 #### [南岛：共产党拆了中国的“承重墙”](../../pages/nsc993/n13298695.md) 
 #### [袁斌：“抗美援朝是毛泽东一个人拍板的决策”](../../pages/nsc993/n13298572.md) 
@@ -29,7 +30,6 @@
 #### [郑纯清：而今最危险的是中共——应“台湾很危险”之说](../../pages/nsc993/n13276137.md) 
 #### [唐付民：“共同富裕”是中共对中国人民的第三次欺骗和愚弄](../../pages/nsc993/n13276091.md) 
 #### [吴新：大停电是大散架的起点](../../pages/nsc993/n13276065.md) 
-#### [祝君安：背锅与灭亡](../../pages/nsc993/n13276014.md) 
 
 ---
 #### 第 [ [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) ] 页
