--- a/indexes/nsc993/64.md
+++ b/indexes/nsc993/64.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [政府懒政酿惨剧 福建现当代版上梁山](../../pages/nsc993/n13303481.md) 
+#### [孙岩：CCP对香港的迫害将导致CCP的灭亡](../../pages/nsc993/n13303673.md) 
 #### [“全面小康”下的农村老人生活一瞥](../../pages/nsc993/n13301579.md) 
 #### [【网海拾贝】“台湾正处在民主防线的最前缘”](../../pages/nsc993/n13298607.md) 
 #### [南岛：共产党拆了中国的“承重墙”](../../pages/nsc993/n13298695.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】孙力军私藏了什么“涉密材料”？](../../pages/nsc993/n13276325.md) 
 #### [白丁：孟晚舟获释，几家欢喜几家愁？](../../pages/nsc993/n13276158.md) 
 #### [郑纯清：而今最危险的是中共——应“台湾很危险”之说](../../pages/nsc993/n13276137.md) 
-#### [唐付民：“共同富裕”是中共对中国人民的第三次欺骗和愚弄](../../pages/nsc993/n13276091.md) 
-#### [吴新：大停电是大散架的起点](../../pages/nsc993/n13276065.md) 
 
 ---
 #### 第 [ [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) ] 页
