have a nice day!

--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [无神论者向神的宣战](../../pages/nsc1028/n13281535.md) 
+#### [王友群：王实味被中共枪毙之谜](../../pages/nsc1028/n13307502.md) 
 #### [重提大陆与台湾互致公开信的那段历史](../../pages/nsc1028/n13305095.md) 
 #### [道教遭中共异化迫害](../../pages/nsc1028/n13281463.md) 
 #### [中国佛教史上最大法难——中共毁灭佛教](../../pages/nsc1028/n13281397.md) 
@@ -28,8 +30,6 @@
 #### [【名家专栏】不太惬意的夏日时光](../../pages/nsc1028/n13226398.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（7）](../../pages/nsc1028/n13227610.md) 
 #### [金言：古代帝王降生有哪些异象？](../../pages/nsc1028/n13226435.md) 
-#### [中共罪行录之五十一：死于文革的著名作家](../../pages/nsc1028/n13225932.md) 
-#### [无神论——人类面临的最危险骗局](../../pages/nsc1028/n13196137.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
