--- a/indexes/nsc993/64.md
+++ b/indexes/nsc993/64.md
@@ -1,5 +1,9 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共把美国变成了腐败支部](../../pages/nsc993/n13308449.md) 
+#### [海奥华：中共“勤劳致富”的谎言](../../pages/nsc993/n13308500.md) 
+#### [中共国的民主是“本世纪最大笑话”](../../pages/nsc993/n13308439.md) 
+#### [【网海拾贝】走在王朝末路上的中共](../../pages/nsc993/n13306255.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13305542.md) 
 #### [王维洛：罗昌平、长津湖和三峡大坝工程](../../pages/nsc993/n13305617.md) 
 #### [【网海拾贝】财新要有麻烦了 蚂蚁听到了风声？](../../pages/nsc993/n13303518.md) 
@@ -26,10 +30,6 @@
 #### [【网海拾贝】中共每天都在上演绞肉连续剧](../../pages/nsc993/n13282662.md) 
 #### [“自干五”和“小粉红”的觉醒心路（1）](../../pages/nsc993/n13282577.md) 
 #### [农民工的黄金周是对社会主义优越性的讽刺](../../pages/nsc993/n13279129.md) 
-#### [【网海拾贝】共产党的圈套](../../pages/nsc993/n13279355.md) 
-#### [【网海拾贝】中共国应该叫“中华共产权贵国”](../../pages/nsc993/n13277732.md) 
-#### [赵家人为什么要把孩子送到美国？](../../pages/nsc993/n13277707.md) 
-#### [理悟：“十一”感怀（五首）](../../pages/nsc993/n13277203.md) 
 
 ---
 #### 第 [ [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) ] 页
