--- a/indexes/nsc993/64.md
+++ b/indexes/nsc993/64.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共末日来临之际的死循环](../../pages/nsc993/n13309649.md) 
+#### [政治漫画：最具中共特色的“超限战”](../../pages/nsc993/n13308510.md) 
 #### [【网海拾贝】中共把美国变成了腐败支部](../../pages/nsc993/n13308449.md) 
 #### [海奥华：中共“勤劳致富”的谎言](../../pages/nsc993/n13308500.md) 
 #### [中共国的民主是“本世纪最大笑话”](../../pages/nsc993/n13308439.md) 
@@ -28,8 +30,6 @@
 #### [海奥华：写给还没“三退”的同胞们](../../pages/nsc993/n13284718.md) 
 #### [理悟：清算进行中——说政法恶虎纷纷落马](../../pages/nsc993/n13284707.md) 
 #### [【网海拾贝】中共每天都在上演绞肉连续剧](../../pages/nsc993/n13282662.md) 
-#### [“自干五”和“小粉红”的觉醒心路（1）](../../pages/nsc993/n13282577.md) 
-#### [农民工的黄金周是对社会主义优越性的讽刺](../../pages/nsc993/n13279129.md) 
 
 ---
 #### 第 [ [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) ] 页
