have a nice day!

--- a/indexes/nsc1025/140.md
+++ b/indexes/nsc1025/140.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [【纪元专栏】能源危机：我们自食其果](../../pages/nsc1025/n13318031.md) 
+#### [夏林：前国务卿蓬佩奥 为谁流了太多眼泪？](../../pages/nsc1025/n13317961.md) 
+#### [王友群：中共六中全会为何到11月才开？](../../pages/nsc1025/n13315769.md) 
+#### [郝平：第三个历史决议或成中共催命符](../../pages/nsc1025/n13315896.md) 
+#### [周晓辉： 鲍威尔染疫去世 生前对中共友好](../../pages/nsc1025/n13315806.md) 
 #### [袁斌：关于“孙力军政治团伙”的三大疑团](../../pages/nsc1025/n13314729.md) 
 #### [【名家专栏】欧盟正加大力度对抗中共](../../pages/nsc1025/n13315239.md) 
 #### [千百度：莆田命案中，杀人的不止是欧金中](../../pages/nsc1025/n13314840.md) 
@@ -25,11 +30,6 @@
 #### [【名家专栏】对抗中共控制社交媒体的策略](../../pages/nsc1025/n13310382.md) 
 #### [毕平：孟晚舟案与法治精神 ](../../pages/nsc1025/n13310613.md) 
 #### [陈思敏：中国房地产税落地加速 烂尾住宅问题悬而未决](../../pages/nsc1025/n13309987.md) 
-#### [田云：莆田杀人案发酵 党媒评论搞双重标准](../../pages/nsc1025/n13309628.md) 
-#### [龙不吟：黑社会，社会黑，都不如拉阐黑让人摸不着头脑](../../pages/nsc1025/n13309839.md) 
-#### [郝平：中共高调释义“共同富裕” 五大忧患紧逼](../../pages/nsc1025/n13309732.md) 
-#### [袁斌：从莆田命案看中共维稳的恶循环](../../pages/nsc1025/n13309558.md) 
-#### [钟原：党媒捧习仲勋家风 内斗摊牌在即？](../../pages/nsc1025/n13309352.md) 
 
 ---
 #### 第 [ [140](./140.md) / [139](./139.md) / [138](./138.md) / [137](./137.md) / [136](./136.md) / [135](./135.md) / [134](./134.md) / [133](./133.md) ] 页
