--- a/indexes/nsc993/65.md
+++ b/indexes/nsc993/65.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】当穷人的灯都灭了，富人的黑夜也就降临了](../../pages/nsc993/n13316913.md) 
+#### [【网海拾贝】与中共政权谈判是不切实际的](../../pages/nsc993/n13314868.md) 
 #### [【网海拾贝】中国就像一个即将引爆的火药桶](../../pages/nsc993/n13311974.md) 
 #### [莆田命案试图带节奏，胡锡进被骂“还是人吗”](../../pages/nsc993/n13311772.md) 
 #### [【网海拾贝】中共末日来临之际的死循环](../../pages/nsc993/n13309649.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】傅政华睡不着觉的根本原因](../../pages/nsc993/n13287736.md) 
 #### [党校教授：大数据帮不上计划经济什么忙](../../pages/nsc993/n13287648.md) 
 #### [《长津湖》：抗日神剧2021高清版](../../pages/nsc993/n13284959.md) 
-#### [【网海拾贝】国人的日常生活和治安被一帮罪犯管着](../../pages/nsc993/n13285024.md) 
-#### [海奥华：写给还没“三退”的同胞们](../../pages/nsc993/n13284718.md) 
 
 ---
 #### 第 [ [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) ] 页
