--- a/indexes/nsc993/65.md
+++ b/indexes/nsc993/65.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [曾铮：我经历的现实版“鱿鱼游戏”](../../pages/nsc993/n13324235.md) 
+#### [观雨堂主：我从来就没有自己的国家](../../pages/nsc993/n13324212.md) 
+#### [【网海拾贝】共产党历来有内外两套语言](../../pages/nsc993/n13324119.md) 
 #### [【网海拾贝】习近平力推第三个历史决议意图何在](../../pages/nsc993/n13319583.md) 
 #### [袁斌：植物人需亲自到场证明是植物人的荒唐剧](../../pages/nsc993/n13319517.md) 
 #### [【网海拾贝】当穷人的灯都灭了，富人的黑夜也就降临了](../../pages/nsc993/n13316913.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】为质疑“抗美援朝”的罗昌平点赞](../../pages/nsc993/n13293902.md) 
 #### [【网海拾贝】制度才是最大的国情](../../pages/nsc993/n13292455.md) 
 #### [大陆教授：“爱国不需要理由”非常可疑](../../pages/nsc993/n13292404.md) 
-#### [【网海拾贝】习近平政权安全的威胁主要来自内部？](../../pages/nsc993/n13290496.md) 
-#### [前大陆警察曝光中共迫害维族人酷刑细节](../../pages/nsc993/n13290422.md) 
-#### [【网海拾贝】傅政华睡不着觉的根本原因](../../pages/nsc993/n13287736.md) 
 
 ---
 #### 第 [ [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) ] 页
