--- a/indexes/nsc993/65.md
+++ b/indexes/nsc993/65.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】每一次明星嫖娼都很及时](../../pages/nsc993/n13326552.md) 
+#### [疫苗受害者：“我只想回到我原来的生活”](../../pages/nsc993/n13326539.md) 
 #### [曾铮：我经历的现实版“鱿鱼游戏”](../../pages/nsc993/n13324235.md) 
 #### [观雨堂主：我从来就没有自己的国家](../../pages/nsc993/n13324212.md) 
 #### [【网海拾贝】共产党历来有内外两套语言](../../pages/nsc993/n13324119.md) 
@@ -28,8 +30,6 @@
 #### [当局会允许中肯评价电影《长津湖》吗？不可能！](../../pages/nsc993/n13294164.md) 
 #### [韩亦言：一语胜千言](../../pages/nsc993/n13296643.md) 
 #### [【网海拾贝】为质疑“抗美援朝”的罗昌平点赞](../../pages/nsc993/n13293902.md) 
-#### [【网海拾贝】制度才是最大的国情](../../pages/nsc993/n13292455.md) 
-#### [大陆教授：“爱国不需要理由”非常可疑](../../pages/nsc993/n13292404.md) 
 
 ---
 #### 第 [ [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) ] 页
