have a nice day!

--- a/indexes/nsc993/65.md
+++ b/indexes/nsc993/65.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [云松：双十节有感](../../pages/nsc993/n13327729.md) 
+#### [千百度：大陆时评作者揭党媒如何歪曲抹黑外国](../../pages/nsc993/n13327425.md) 
 #### [【网海拾贝】每一次明星嫖娼都很及时](../../pages/nsc993/n13326552.md) 
 #### [疫苗受害者：“我只想回到我原来的生活”](../../pages/nsc993/n13326539.md) 
 #### [曾铮：我经历的现实版“鱿鱼游戏”](../../pages/nsc993/n13324235.md) 
@@ -28,8 +30,6 @@
 #### [袁斌：“抗美援朝是毛泽东一个人拍板的决策”](../../pages/nsc993/n13298572.md) 
 #### [【网海拾贝】美中关系不由中共说了算](../../pages/nsc993/n13296468.md) 
 #### [当局会允许中肯评价电影《长津湖》吗？不可能！](../../pages/nsc993/n13294164.md) 
-#### [韩亦言：一语胜千言](../../pages/nsc993/n13296643.md) 
-#### [【网海拾贝】为质疑“抗美援朝”的罗昌平点赞](../../pages/nsc993/n13293902.md) 
 
 ---
 #### 第 [ [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) ] 页
