--- a/indexes/nsc1035/52.md
+++ b/indexes/nsc1035/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [慕容雪儿：如何判断，你看到的世界是否真实？](../../pages/nsc1035/n13332569.md) 
 #### [清荷：叫610的信心怎能不垮？](../../pages/nsc1035/n13304848.md) 
 #### [李疏影：《面试》——一件衣服，改变一生](../../pages/nsc1035/n13292494.md) 
 #### [觅真：从耄耋老人被劫入狱看解体中共的急迫](../../pages/nsc1035/n13284545.md) 
@@ -29,7 +30,6 @@
 #### [清竹：观小舞剧《龙门客栈》有感](../../pages/nsc1035/n13069850.md) 
 #### [养育孩子：平衡自由与安全的技巧](../../pages/nsc1035/n13054510.md) 
 #### [人生规则的关键是个人责任](../../pages/nsc1035/n13053252.md) 
-#### [和风：消声的悲歌](../../pages/nsc1035/n13051994.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
