--- a/indexes/nsc993/65.md
+++ b/indexes/nsc993/65.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共入联合国50年，祸害人类50年](../../pages/nsc993/n13332622.md) 
 #### [【网海拾贝】到处爆炸 “中国是最安全的国家”？](../../pages/nsc993/n13330109.md) 
 #### [疫苗受害者：“我可怜的女儿不能这样悲惨地离世”](../../pages/nsc993/n13329584.md) 
 #### [云松：双十节有感](../../pages/nsc993/n13327729.md) 
@@ -29,7 +30,6 @@
 #### [“全面小康”下的农村老人生活一瞥](../../pages/nsc993/n13301579.md) 
 #### [【网海拾贝】“台湾正处在民主防线的最前缘”](../../pages/nsc993/n13298607.md) 
 #### [南岛：共产党拆了中国的“承重墙”](../../pages/nsc993/n13298695.md) 
-#### [袁斌：“抗美援朝是毛泽东一个人拍板的决策”](../../pages/nsc993/n13298572.md) 
 
 ---
 #### 第 [ [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) ] 页
