--- a/indexes/nsc1026/51.md
+++ b/indexes/nsc1026/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [【财经话题】也谈“比特币信徒”恶性通胀论](../../pages/nsc1026/n13331972.md) 
 #### [何冰：恒大新闻不断，有钱了吗？](../../pages/nsc1026/n13325002.md) 
 #### [【财经话题】不可低估通胀和高估滞胀风险](../../pages/nsc1026/n13300505.md) 
 #### [何冰：此时，老板们选择背弃华尔街朋友](../../pages/nsc1026/n13295291.md) 
@@ -29,7 +30,6 @@
 #### [陈思敏：A股上市公司财务造假的根源](../../pages/nsc1026/n11229323.md) 
 #### [【谈股论金】巴菲特也说通胀来了](../../pages/nsc1026/n12922463.md) 
 #### [不只弯道超车 中共围剿特斯拉阴谋（上）](../../pages/nsc1026/n12919595.md) 
-#### [【财经话题】拜登的富人税或让美股封顶](../../pages/nsc1026/n12899125.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
