--- a/indexes/nsc993/65.md
+++ b/indexes/nsc993/65.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共暴政制造了一个又一个张献忠](../../pages/nsc993/n13335375.md) 
+#### [瑞丽防疫政策粗暴 市民控诉民不聊生](../../pages/nsc993/n13335277.md) 
 #### [【网海拾贝】中共入联合国50年，祸害人类50年](../../pages/nsc993/n13332622.md) 
 #### [【网海拾贝】到处爆炸 “中国是最安全的国家”？](../../pages/nsc993/n13330109.md) 
 #### [疫苗受害者：“我可怜的女儿不能这样悲惨地离世”](../../pages/nsc993/n13329584.md) 
@@ -28,8 +30,6 @@
 #### [政府懒政酿惨剧 福建现当代版上梁山](../../pages/nsc993/n13303481.md) 
 #### [孙岩：CCP对香港的迫害将导致CCP的灭亡](../../pages/nsc993/n13303673.md) 
 #### [“全面小康”下的农村老人生活一瞥](../../pages/nsc993/n13301579.md) 
-#### [【网海拾贝】“台湾正处在民主防线的最前缘”](../../pages/nsc993/n13298607.md) 
-#### [南岛：共产党拆了中国的“承重墙”](../../pages/nsc993/n13298695.md) 
 
 ---
 #### 第 [ [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) ] 页
