have a nice day!

--- a/indexes/nsc1025/143.md
+++ b/indexes/nsc1025/143.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [王赫：新西兰使中共“大周边外交”受重挫](../../pages/nsc1025/n13337786.md) 
 #### [钟原：中共难主导阿富汗问题 承认邻国对立](../../pages/nsc1025/n13337770.md) 
 #### [王友群：江泽民是活摘器官的罪魁祸首](../../pages/nsc1025/n13336903.md) 
 #### [【名家专栏】美新任大使重申对中共强硬原则](../../pages/nsc1025/n13336230.md) 
@@ -29,7 +30,6 @@
 #### [石中：善恶有报的天理在兑现](../../pages/nsc1025/n13327698.md) 
 #### [钟原：传闻又起 党媒忙乱 二十大新争夺？](../../pages/nsc1025/n13327186.md) 
 #### [郝平：房地产税低调落地 共同富裕出师不利](../../pages/nsc1025/n13327241.md) 
-#### [【名家专栏】制裁与中共勾连的富商](../../pages/nsc1025/n13326191.md) 
 
 ---
-#### 第 [ [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) / [138](./138.md) / [137](./137.md) / [136](./136.md) / [135](./135.md) ] 页
+#### 第 [ [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) / [138](./138.md) / [137](./137.md) / [136](./136.md) ] 页
