--- a/indexes/nsc993/65.md
+++ b/indexes/nsc993/65.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】帮帮我们瑞丽人吧！救救我们吧！](../../pages/nsc993/n13339001.md) 
+#### [中共是怎么为自己涂脂抹粉的（3）](../../pages/nsc993/n13335534.md) 
 #### [【网海拾贝】中共暴政制造了一个又一个张献忠](../../pages/nsc993/n13335375.md) 
 #### [瑞丽防疫政策粗暴 市民控诉民不聊生](../../pages/nsc993/n13335277.md) 
 #### [【网海拾贝】中共入联合国50年，祸害人类50年](../../pages/nsc993/n13332622.md) 
@@ -28,8 +30,6 @@
 #### [王维洛：罗昌平、长津湖和三峡大坝工程](../../pages/nsc993/n13305617.md) 
 #### [【网海拾贝】财新要有麻烦了 蚂蚁听到了风声？](../../pages/nsc993/n13303518.md) 
 #### [政府懒政酿惨剧 福建现当代版上梁山](../../pages/nsc993/n13303481.md) 
-#### [孙岩：CCP对香港的迫害将导致CCP的灭亡](../../pages/nsc993/n13303673.md) 
-#### [“全面小康”下的农村老人生活一瞥](../../pages/nsc993/n13301579.md) 
 
 ---
 #### 第 [ [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) ] 页
