--- a/indexes/nsc993/65.md
+++ b/indexes/nsc993/65.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [中共是怎么为自己涂脂抹粉的（4）](../../pages/nsc993/n13340568.md) 
 #### [【网海拾贝】帮帮我们瑞丽人吧！救救我们吧！](../../pages/nsc993/n13339001.md) 
 #### [中共是怎么为自己涂脂抹粉的（3）](../../pages/nsc993/n13335534.md) 
 #### [【网海拾贝】中共暴政制造了一个又一个张献忠](../../pages/nsc993/n13335375.md) 
@@ -29,7 +30,6 @@
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13305542.md) 
 #### [王维洛：罗昌平、长津湖和三峡大坝工程](../../pages/nsc993/n13305617.md) 
 #### [【网海拾贝】财新要有麻烦了 蚂蚁听到了风声？](../../pages/nsc993/n13303518.md) 
-#### [政府懒政酿惨剧 福建现当代版上梁山](../../pages/nsc993/n13303481.md) 
 
 ---
 #### 第 [ [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) ] 页
