--- a/indexes/nsc993/65.md
+++ b/indexes/nsc993/65.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [大陆家长质疑儿童打新冠疫苗决策不透明](../../pages/nsc993/n13347261.md) 
 #### [【网海拾贝】美国一舞台湾牌，中共就像疯牛一样](../../pages/nsc993/n13344669.md) 
 #### [李春草：阿 Q 自白](../../pages/nsc993/n13343668.md) 
 #### [中共是怎么为自己涂脂抹粉的（4）](../../pages/nsc993/n13340568.md) 
@@ -29,7 +30,6 @@
 #### [海奥华：中共“勤劳致富”的谎言](../../pages/nsc993/n13308500.md) 
 #### [中共国的民主是“本世纪最大笑话”](../../pages/nsc993/n13308439.md) 
 #### [【网海拾贝】走在王朝末路上的中共](../../pages/nsc993/n13306255.md) 
-#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13305542.md) 
 
 ---
 #### 第 [ [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) ] 页
