--- a/indexes/nsc993/65.md
+++ b/indexes/nsc993/65.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [发表情包也被拘，网友：警察“想抓谁就抓谁”](../../pages/nsc993/n13349925.md) 
+#### [【网海拾贝】“抗疫战争的伟大胜利”毁了多少人的生活](../../pages/nsc993/n13347377.md) 
 #### [大陆家长质疑儿童打新冠疫苗决策不透明](../../pages/nsc993/n13347261.md) 
 #### [【网海拾贝】美国一舞台湾牌，中共就像疯牛一样](../../pages/nsc993/n13344669.md) 
 #### [李春草：阿 Q 自白](../../pages/nsc993/n13343668.md) 
@@ -28,8 +30,6 @@
 #### [政治漫画：最具中共特色的“超限战”](../../pages/nsc993/n13308510.md) 
 #### [【网海拾贝】中共把美国变成了腐败支部](../../pages/nsc993/n13308449.md) 
 #### [海奥华：中共“勤劳致富”的谎言](../../pages/nsc993/n13308500.md) 
-#### [中共国的民主是“本世纪最大笑话”](../../pages/nsc993/n13308439.md) 
-#### [【网海拾贝】走在王朝末路上的中共](../../pages/nsc993/n13306255.md) 
 
 ---
 #### 第 [ [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) ] 页
