--- a/indexes/nsc1026/51.md
+++ b/indexes/nsc1026/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [王赫：中国经济迷思之四—外商投资第一？](../../pages/nsc1026/n13354150.md) 
 #### [北京证券交易所上市新规解析](../../pages/nsc1026/n13348292.md) 
 #### [【财经话题】也谈“比特币信徒”恶性通胀论](../../pages/nsc1026/n13331972.md) 
 #### [何冰：恒大新闻不断，有钱了吗？](../../pages/nsc1026/n13325002.md) 
@@ -29,7 +30,6 @@
 #### [数据派：研判财经不能离开信仰大背景](../../pages/nsc1026/n12932684.md) 
 #### [【财经话题】耶伦的升息谈话含浓厚政治味](../../pages/nsc1026/n12927299.md) 
 #### [陈思敏：A股上市公司财务造假的根源](../../pages/nsc1026/n11229323.md) 
-#### [【谈股论金】巴菲特也说通胀来了](../../pages/nsc1026/n12922463.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
