--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】是谁给了彭帅曝光张高丽的胆子？](../../pages/nsc993/n13355728.md) 
 #### [【网海拾贝】信中共的彭帅与不信中共的李娜](../../pages/nsc993/n13352875.md) 
 #### [张高丽性侵彭帅 网民吐糟](../../pages/nsc993/n13352787.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13352744.md) 
@@ -29,7 +30,6 @@
 #### [袁斌：植物人需亲自到场证明是植物人的荒唐剧](../../pages/nsc993/n13319517.md) 
 #### [【网海拾贝】当穷人的灯都灭了，富人的黑夜也就降临了](../../pages/nsc993/n13316913.md) 
 #### [【网海拾贝】与中共政权谈判是不切实际的](../../pages/nsc993/n13314868.md) 
-#### [【网海拾贝】中国就像一个即将引爆的火药桶](../../pages/nsc993/n13311974.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
