have a nice day!

--- a/indexes/nsc1025/145.md
+++ b/indexes/nsc1025/145.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】强制接种疫苗与消减公民自由](../../pages/nsc1025/n13355883.md) 
+#### [程晓农：房地产税如何改变中国中产家庭的未来？](../../pages/nsc1025/n13357744.md) 
 #### [郝平：敏感时刻 中共政局波诡云谲](../../pages/nsc1025/n13357660.md) 
 #### [惜缘：为什么要退出共产党](../../pages/nsc1025/n13357518.md) 
 #### [【名家专栏】共和党在弗吉尼亚州选举中大胜](../../pages/nsc1025/n13355971.md) 
@@ -28,8 +30,6 @@
 #### [王友群：日本大选的四大影响](../../pages/nsc1025/n13348950.md) 
 #### [【名家专栏】奇怪的微信诉讼案](../../pages/nsc1025/n13347820.md) 
 #### [王赫：美国如何才能慑止中共核武扩张？](../../pages/nsc1025/n13348851.md) 
-#### [【名家专栏】美科学家应停止与共产政权勾结](../../pages/nsc1025/n13347831.md) 
-#### [袁斌：瑞丽市长说瑞丽不需要援助，是这样吗？](../../pages/nsc1025/n13347206.md) 
 
 ---
-#### 第 [ [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) / [138](./138.md) / [137](./137.md) ] 页
+#### 第 [ [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) / [138](./138.md) ] 页
