--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】张高丽性侵，痛批李云迪的媒体去哪了](../../pages/nsc993/n13357431.md) 
+#### [吐为快：赵国民主赋](../../pages/nsc993/n13357508.md) 
+#### [“自干五”和“小粉红”的觉醒心路（2）](../../pages/nsc993/n13357310.md) 
 #### [【网海拾贝】是谁给了彭帅曝光张高丽的胆子？](../../pages/nsc993/n13355728.md) 
 #### [【网海拾贝】信中共的彭帅与不信中共的李娜](../../pages/nsc993/n13352875.md) 
 #### [张高丽性侵彭帅 网民吐糟](../../pages/nsc993/n13352787.md) 
@@ -27,9 +30,6 @@
 #### [观雨堂主：我从来就没有自己的国家](../../pages/nsc993/n13324212.md) 
 #### [【网海拾贝】共产党历来有内外两套语言](../../pages/nsc993/n13324119.md) 
 #### [【网海拾贝】习近平力推第三个历史决议意图何在](../../pages/nsc993/n13319583.md) 
-#### [袁斌：植物人需亲自到场证明是植物人的荒唐剧](../../pages/nsc993/n13319517.md) 
-#### [【网海拾贝】当穷人的灯都灭了，富人的黑夜也就降临了](../../pages/nsc993/n13316913.md) 
-#### [【网海拾贝】与中共政权谈判是不切实际的](../../pages/nsc993/n13314868.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
