--- a/indexes/nsc1028/57.md
+++ b/indexes/nsc1028/57.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [以中山之名 行共产之实](../../pages/nsc1028/n13346437.md) 
+#### [王友群：“云南王”谭甫仁被暗杀之谜](../../pages/nsc1028/n13357123.md) 
 #### [中共罪行录之五十六：地质学泰斗的不堪晚年](../../pages/nsc1028/n13355675.md) 
 #### [重返1949国殇日](../../pages/nsc1028/n13346372.md) 
 #### [王友群：从“华东王”到“野心家”的饶漱石](../../pages/nsc1028/n13346037.md) 
@@ -28,8 +30,6 @@
 #### [林辉：王洪文两个“没想到” 遭酷刑被关秦城](../../pages/nsc1028/n13244136.md) 
 #### [王友群：傅作义身边的中共间谍阎又文](../../pages/nsc1028/n13244038.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（9）](../../pages/nsc1028/n13243175.md) 
-#### [周傥：共产党统治下绝没有自由——记胡适和陈垣的一段历史公案](../../pages/nsc1028/n13238349.md) 
-#### [袁斌：我们从小到大学到的历史哪些是假的（8）](../../pages/nsc1028/n13238181.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
