--- a/indexes/nsc1025/145.md
+++ b/indexes/nsc1025/145.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】《鱿鱼游戏》反映残酷债务现实](../../pages/nsc1025/n13359579.md) 
+#### [【名家专栏】州长竞选：第一回合好人获胜](../../pages/nsc1025/n13357917.md) 
+#### [王赫：房地产税成中共鸡肋？](../../pages/nsc1025/n13358332.md) 
+#### [杨威：党媒最高调捧习 泄六中全会决议？](../../pages/nsc1025/n13358568.md) 
 #### [【名家专栏】强制接种疫苗与消减公民自由](../../pages/nsc1025/n13355883.md) 
 #### [程晓农：房地产税如何改变中国中产家庭的未来？](../../pages/nsc1025/n13357744.md) 
 #### [郝平：敏感时刻 中共政局波诡云谲](../../pages/nsc1025/n13357660.md) 
@@ -26,10 +30,6 @@
 #### [袁斌：北京14名独立候选人为何宣布停止参选？](../../pages/nsc1025/n13349774.md) 
 #### [李靖宇：被迫参加鱿鱼游戏的中国年轻人](../../pages/nsc1025/n13349660.md) 
 #### [李正宽：张高丽陷性侵丑闻—道貌岸然的背后](../../pages/nsc1025/n13349318.md) 
-#### [杨威：中共成气候问题不合群者 停电白玩了？](../../pages/nsc1025/n13348414.md) 
-#### [王友群：日本大选的四大影响](../../pages/nsc1025/n13348950.md) 
-#### [【名家专栏】奇怪的微信诉讼案](../../pages/nsc1025/n13347820.md) 
-#### [王赫：美国如何才能慑止中共核武扩张？](../../pages/nsc1025/n13348851.md) 
 
 ---
 #### 第 [ [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) / [138](./138.md) ] 页
