--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [“自干五”和“小粉红”的觉醒心路（3）](../../pages/nsc993/n13358759.md) 
+#### [【网海拾贝】时空伴随者，全民参演科幻剧？](../../pages/nsc993/n13358829.md) 
 #### [【网海拾贝】张高丽性侵，痛批李云迪的媒体去哪了](../../pages/nsc993/n13357431.md) 
 #### [吐为快：赵国民主赋](../../pages/nsc993/n13357508.md) 
 #### [“自干五”和“小粉红”的觉醒心路（2）](../../pages/nsc993/n13357310.md) 
@@ -28,8 +30,6 @@
 #### [疫苗受害者：“我只想回到我原来的生活”](../../pages/nsc993/n13326539.md) 
 #### [曾铮：我经历的现实版“鱿鱼游戏”](../../pages/nsc993/n13324235.md) 
 #### [观雨堂主：我从来就没有自己的国家](../../pages/nsc993/n13324212.md) 
-#### [【网海拾贝】共产党历来有内外两套语言](../../pages/nsc993/n13324119.md) 
-#### [【网海拾贝】习近平力推第三个历史决议意图何在](../../pages/nsc993/n13319583.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
