have a nice day!

--- a/indexes/nsc1025/145.md
+++ b/indexes/nsc1025/145.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】气候暖化会议虚伪可笑](../../pages/nsc1025/n13361856.md) 
+#### [洪博：三退累计人数逼近3.9亿 小粉红看清中共](../../pages/nsc1025/n13361362.md) 
+#### [石铭：中共十月加剧迫害 逾百法轮功学员被冤判](../../pages/nsc1025/n13360557.md) 
+#### [张菁：人大投票选举 嘲讽中国有民主](../../pages/nsc1025/n13360013.md) 
+#### [沈舟：美国2021中共军力报告—核军备](../../pages/nsc1025/n13359881.md) 
+#### [【名家专栏】北京咄咄逼人促使美国变得强硬](../../pages/nsc1025/n13355939.md) 
 #### [【名家专栏】《鱿鱼游戏》反映残酷债务现实](../../pages/nsc1025/n13359579.md) 
 #### [【名家专栏】州长竞选：第一回合好人获胜](../../pages/nsc1025/n13357917.md) 
 #### [王赫：房地产税成中共鸡肋？](../../pages/nsc1025/n13358332.md) 
@@ -24,12 +30,6 @@
 #### [木隶孙：扒一扒中共国防疫的奇葩怪招](../../pages/nsc1025/n13352489.md) 
 #### [王友群：江泽民与108名中共亿元贪官](../../pages/nsc1025/n13352358.md) 
 #### [钟原：六中全会前中共频造势 能防意外吗？](../../pages/nsc1025/n13352023.md) 
-#### [【名家专栏】美国当前供应链问题及未来走向](../../pages/nsc1025/n13350111.md) 
-#### [周晓辉： 张高丽丑闻突曝光有何说道](../../pages/nsc1025/n13351161.md) 
-#### [【名家专栏】媒体噤声中共活摘器官 等于同谋](../../pages/nsc1025/n13350726.md) 
-#### [袁斌：北京14名独立候选人为何宣布停止参选？](../../pages/nsc1025/n13349774.md) 
-#### [李靖宇：被迫参加鱿鱼游戏的中国年轻人](../../pages/nsc1025/n13349660.md) 
-#### [李正宽：张高丽陷性侵丑闻—道貌岸然的背后](../../pages/nsc1025/n13349318.md) 
 
 ---
 #### 第 [ [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) / [138](./138.md) ] 页
