--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】新一出中共权斗戏码，揪出江泽民白手套](../../pages/nsc993/n13361697.md) 
+#### [“自干五”和“小粉红”的觉醒心路（4）](../../pages/nsc993/n13361539.md) 
+#### [唐付民：抗御新冠应人工免疫和自然免疫有机配合](../../pages/nsc993/n13361526.md) 
 #### [“自干五”和“小粉红”的觉醒心路（3）](../../pages/nsc993/n13358759.md) 
 #### [【网海拾贝】时空伴随者，全民参演科幻剧？](../../pages/nsc993/n13358829.md) 
 #### [【网海拾贝】张高丽性侵，痛批李云迪的媒体去哪了](../../pages/nsc993/n13357431.md) 
@@ -27,9 +30,6 @@
 #### [云松：双十节有感](../../pages/nsc993/n13327729.md) 
 #### [千百度：大陆时评作者揭党媒如何歪曲抹黑外国](../../pages/nsc993/n13327425.md) 
 #### [【网海拾贝】每一次明星嫖娼都很及时](../../pages/nsc993/n13326552.md) 
-#### [疫苗受害者：“我只想回到我原来的生活”](../../pages/nsc993/n13326539.md) 
-#### [曾铮：我经历的现实版“鱿鱼游戏”](../../pages/nsc993/n13324235.md) 
-#### [观雨堂主：我从来就没有自己的国家](../../pages/nsc993/n13324212.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
